Apache Tez Change Log
=====================

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2679. Admin forms of launch env settings
  TEZ-2949. Allow duplicate dag names within session for Tez.

ALL CHANGES
  TEZ-2973. Backport Analyzers to branch-0.7
  TEZ-2975. Bump up apache commons dependency.
  TEZ-2970. Re-localization in TezChild does not use correct UGI.
  TEZ-2968. Counter limits exception causes AM to crash.
  TEZ-2960. Tez UI: Move hardcoded url namespace to the configuration file
  TEZ-2947. Tez UI: Timeline, RM & AM requests gets into a consecutive loop in counters page without any delay
  TEZ-2946. Tez UI: At times RM return a huge error message making the yellow error bar to fill the whole screen
  TEZ-2949. Allow duplicate dag names within session for Tez.
  TEZ-2933. Tez UI: Load application details from RM when available
  TEZ-2908. Tez UI: Errors are logged, but not displayed in the UI when AM fetch fails
  TEZ-2923. Tez Live UI counters view empty for vertices, tasks, attempts
  TEZ-2935. Add MR slow start translation for ShuffleVertexManager
  TEZ-2940. Invalid shuffle max slow start setting causes vertex to hang indefinitely
  TEZ-2930. Tez UI: Parent controller is not polling at times
  TEZ-1670. Add tests for all converter functions in HistoryEventTimelineConversion.
  TEZ-2929. Tez UI: Dag details page displays vertices to be running even when dag have completed
  TEZ-2927. Tez UI: Graciously fail when system-metrics-publisher is disabled
  TEZ-2915. Tez UI: Getting back to the DAG details page is difficult
  TEZ-2895. Tez UI: Add option to enable and disable in-progress
  TEZ-2894. Tez UI: Disable sorting for few columns while in progress. Display an alert on trying to sort them
  TEZ-2893. Tez UI: Retain vertex info displayed in DAG details page even after completion
  TEZ-2878. Tez UI: AM error handling - Make the UI handle cases in which AM returns unexpected/no data
  TEZ-2922. Tez Live UI gives access denied for admins